--- a/contactos.html
+++ b/contactos.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-pt">
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countries at home</title>
     <link rel="icon" type="image/x-icon" href="assets/img/take-off.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://fonts.googleapis.com/css?family=Nunito:300,regular,500,600,700,800" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/paises.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -50,23 +48,56 @@
             </div>
         </div>
     </nav>
-    <main>
-        <div class="search-filter-container">
-            <div class="search-container">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="text" placeholder="Search for a country...">
-            </div>
-            <select class="filter-by-region">
-                <option hidden>Filter by Region</option>
-                <option value="Africa">Africa</option>
-                <option value="America">America</option>
-                <option value="Asia">Asia</option>
-                <option value="Europe">Europe</option>
-                <option value="Oceania">Oceania</option>
-            </select>
+
+    <section class="container cor_fundo">
+        <div class="mt-2">
+            <h1 class="text-center"><u>Contactos</u></h1>
         </div>
-        <div class="countries-container"></div>
-    </main>
+        <form class="container mt-5">
+            <!-- 2 column grid layout with text inputs for the first and last names -->
+            <div class="row mb-4">
+                <div class="col">
+                    <div data-mdb-input-init class="form-outline">
+                        <input type="text" id="primeiro_nome" placeholder="Nome" class="form-control" />
+                        <label class="form-label" for="primeiro_nome"></label>
+                    </div>
+                </div>
+                <div class="col">
+                    <div data-mdb-input-init class="form-outline">
+                        <input type="text" id="Apelido" placeholder="Apelido" class="form-control" />
+                        <label class="form-label" for="apelido"></label>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Email input -->
+            <div data-mdb-input-init class="form-outline mb-4">
+                <input type="email" id="Email" placeholder="Email" class="form-control" />
+                <label class="form-label" for="email"></label>
+            </div>
+
+            <!-- Number input -->
+            <div data-mdb-input-init class="form-outline mb-4">
+                <input type="number" id="telefone" placeholder="Numero de telefone" class="form-control" />
+                <label class="form-label" for="telefone"></label>
+            </div>
+
+            <!-- Message input -->
+            <div data-mdb-input-init class="form-outline">
+                <textarea class="form-control" id="mensagem" placeholder="Escreva aqui a sua mensagem"
+                    rows="4"></textarea>
+                <label class="form-label" for="mensagem"></label>
+            </div>
+
+            <!-- Submit button -->
+            <div class="text-center">
+                <button data-mdb-ripple-init type="button" class="btn btn-primary btn-block mb-4">Enviar
+                    Mensagem</button>
+            </div>
+        </form>
+    </section>
+
+
     <!-- Footer -->
     <footer class="bg-light text-center text-dark py-4">
         <div class="container">
@@ -98,7 +129,13 @@
             </div>
         </div>
     </footer>
-    <script src="assets/css/script/script.js" defer></script>
+    <!-- scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
