--- a/loja.html
+++ b/loja.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Countries at home</title>
+    <title>Countries at Home</title>
     <link rel="icon" type="image/x-icon" href="assets/img/take-off.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://fonts.googleapis.com/css?family=Nunito:300,regular,500,600,700,800" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/paises.css" />
 </head>
 
 <body>
@@ -50,23 +48,28 @@
             </div>
         </div>
     </nav>
-    <main>
-        <div class="search-filter-container">
-            <div class="search-container">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="text" placeholder="Search for a country...">
+
+    <!-- Corpo da página -->
+    <section>
+        <div class="fundoloja container-fluid">
+            <!-- Texto no topo esquerdo -->
+            <div class="erro-404">
+                <h1>ERRO 404</h1>
             </div>
-            <select class="filter-by-region">
-                <option hidden>Filter by Region</option>
-                <option value="Africa">Africa</option>
-                <option value="America">America</option>
-                <option value="Asia">Asia</option>
-                <option value="Europe">Europe</option>
-                <option value="Oceania">Oceania</option>
-            </select>
+            <!-- Texto centralizado no lado direito -->
+            <div class="texto-direita">
+                <h1 class="mt-5">Página <br>
+                    em desenvolvimento</h1>
+                <p class="mt-5">
+                    O nosso explorador está a percorrer o mundo para te oferecer <br>
+                    uma experiência ainda melhor.
+                </p>
+            </div>
         </div>
-        <div class="countries-container"></div>
-    </main>
+    </section>
+
+
+
     <!-- Footer -->
     <footer class="bg-light text-center text-dark py-4">
         <div class="container">
@@ -98,7 +101,7 @@
             </div>
         </div>
     </footer>
-    <script src="assets/css/script/script.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
